Implement a function that return a new promise.

--- a/codingChallenge1.html
+++ b/codingChallenge1.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Coding Challenge</h1>
+    <div class="imgContainer">
+
+    </div>
     <script src="/codingChallenge1.js"></script>
 </body>
 </html>
